--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,54 @@
 <resources>
     <string name="app_name">날씨 및 생활지수</string>
-    <string-array name="vilage">
-        <item>초단기 예보</item>
-        <item>초단기 실황</item>
-        <item>단기 예보</item>
-    </string-array>
+    <string name="address">주소</string>
+    <string name="exaddress">ex)서울 영등포구 문래동</string>
+    <string name="nowFcst">현재날씨</string>
+    <string name="timeFcst">시간대별 예보</string>
+    <string name="weekFcst">주간 예보</string>
+    <string name="time">%s 시</string>
+    <string name="tempUnit">%s ℃</string>
+    <string name="rainUnit">%s</string>
+    <string name="wetUnit">%s %%</string>
+    <string name="rainPerUnit">%s %%</string>
+    <string name="windUnit">%s m/s</string>
+    <string name="nowRainUnit">강수량 : %s</string>
+    <string name="nowWetUnit">습도 : %s %%</string>
+    <string name="nowWindUnit">풍속 : %s %s m/s</string>
+    <string name="am">오전</string>
+    <string name="pm">오후</string>
+    <string name="N">북</string>
+    <string name="NNE">북북동</string>
+    <string name="NE">북동</string>
+    <string name="ENE">동북동</string>
+    <string name="E">동</string>
+    <string name="ESE">동남동</string>
+    <string name="SE">남동</string>
+    <string name="SSE">남남동</string>
+    <string name="S">남</string>
+    <string name="SSW">남남서</string>
+    <string name="SW">남서</string>
+    <string name="WSW">서남서</string>
+    <string name="W">서</string>
+    <string name="WNW">서북서</string>
+    <string name="NW">북서</string>
+    <string name="NNW">북북서</string>
+    <string name="sun">맑음</string>
+    <string name="manycloud">구름많음</string>
+    <string name="cloud">흐림</string>
+        <string name = "APPLICATION_ERROR">어플리케이션 에러</string>
+        <string name = "DB_ERROR">데이터베이스 에러</string>
+        <string name = "NODATA_ERROR">데이터없음 에러</string>
+        <string name = "HTTP_ERROR">HTTP 에러</string>
+        <string name = "SERVICETIME_OUT">서비스 연결실 에러</string>
+        <string name = "INVALID_REQUEST_PARAMETER_ERROR">잘못된 요청 파라메터 에러</string>
+        <string name = "NO_MANDATORY_REQUEST_PARAMETERS_ERROR">필수요청 파라메터가 없음</string>
+        <string name = "NO_OPENAPI_SERVICE_ERROR">해당 오픈 API서비스가 없거나 폐기됨</string>
+        <string name = "SERVICE_ACCESS_DENIED_ERROR">서비스 접근거부</string>
+        <string name = "TEMPORARILY_DISABLE_THE_SERVICEKEY_ERROR">일시적으로 사용할 수 없는 서비스 키</string>
+        <string name = "LIMITED_NUMBER_OF_SERVICE_REQUESTS_EXCEEDS_ERROR">서비스 요청제한횟수 초과에러</string>
+        <string name = "SERVICE_KEY_IS_NOT_REGISTERED_ERROR">등록되지 않은 서비스키</string>
+        <string name = "DEADLINE_HAS_EXPIRED_ERROR">기한만료된 서비스키</string>
+        <string name = "UNREGISTERED_IP_ERROR">등록되지 않은 IP</string>
+        <string name = "UNSIGNED_CALL_ERROR">서명되지 않은 호출</string>
+        <string name = "UNKNOWN_ERROR">기타에러</string>
 </resources>
