네이버 지도를 이용한 위치 작업중

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,16 +5,15 @@
     <string name="nowFcst">현재날씨</string>
     <string name="timeFcst">시간대별 예보</string>
     <string name="weekFcst">주간 예보</string>
-    <string name="time">%s 시</string>
+    <string name="time">%s시</string>
     <string name="date">%s.%s</string>
-    <string name="tempUnit">%s ℃</string>
+    <string name="tempUnit">%s℃</string>
     <string name="rainUnit">%s</string>
-    <string name="wetUnit">%s %%</string>
-    <string name="rainPerUnit">%s %%</string>
-    <string name="windUnit">%s m/s</string>
+    <string name="perUnit">%s%%</string>
+    <string name="windUnit">%sm/s</string>
     <string name="nowRainUnit">강수량 : %s</string>
-    <string name="nowWetUnit">습도 : %s %%</string>
-    <string name="nowWindUnit">풍속 : %s %s m/s</string>
+    <string name="nowWetUnit">습도 : %s%%</string>
+    <string name="nowWindUnit">풍속 : %s %sm/s</string>
     <string name="am">오전</string>
     <string name="pm">오후</string>
     <string name="N">북</string>
