--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
-<resources>
+<resources
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="MissingTranslation">
     <string name="app_name">날씨 및 생활지수</string>
     <string name="address">주소</string>
     <string name="exaddress">ex)서울 영등포구 문래동</string>
@@ -72,4 +74,5 @@
     <string name ="NUM18">18</string>
     <string name ="NUM19">19</string>
     <string name ="NUM20">20</string>
+    <string name="imageLoadFail">이미지를 찾을 수 없습니다.</string>
 </resources>
