--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,4 +75,5 @@
     <string name ="NUM19">19</string>
     <string name ="NUM20">20</string>
     <string name="imageLoadFail">이미지를 찾을 수 없습니다.</string>
+    <string name="weekDate">%s.%s(%s)</string>
 </resources>
