--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,36 @@
     <string name ="NUM20">20</string>
     <string name="imageLoadFail">이미지를 찾을 수 없습니다.</string>
     <string name="weekDate">%s.%s(%s)</string>
+    <string name="land1">서울특별시</string>
+    <string name="land2">인천광역시</string>
+    <string name="land3">경기도</string>
+    <string name="land4">강원도</string>
+    <string name="land5">대전광역시</string>
+    <string name="land6">세종특별자치시</string>
+    <string name="land7">충청남도</string>
+    <string name="land8">충청북도</string>
+    <string name="land9">광주광역시</string>
+    <string name="land10">전라남도</string>
+    <string name="land11">전라북도</string>
+    <string name="land12">대구광역시</string>
+    <string name="land13">경상북도</string>
+    <string name="land14">부산광역시</string>
+    <string name="land15">울산광역시</string>
+    <string name="land16">경상남도</string>
+    <string name="landCode1">11B00000</string>
+    <string name="landCode2">11D10000</string>
+    <string name="landCode3">11C20000</string>
+    <string name="landCode4">11C10000</string>
+    <string name="landCode5">11F20000</string>
+    <string name="landCode6">11F10000</string>
+    <string name="landCode7">11H10000</string>
+    <string name="landCode8">11H20000</string>
+    <string name="landCode9">11G0000</string>
+    <string name="sunday">일</string>
+    <string name="monday">월</string>
+    <string name="tuesday">화</string>
+    <string name="wednesday">수</string>
+    <string name="thursday">목</string>
+    <string name="friday">금</string>
+    <string name="saturday">토</string>
 </resources>
