--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,4 @@
-<resources
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:ignore="MissingTranslation">
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
     <string name="app_name">날씨 및 생활지수</string>
     <string name="address">주소</string>
     <string name="exaddress">ex)서울 영등포구 문래동</string>
@@ -55,25 +53,25 @@
     <string name="UNKNOWN_ERROR">기타에러</string>
     <string name="UNKNOWN_ADDRESS">주소를 찾을 수 없습니다</string>
     <string name="NUM1">1</string>
-    <string name ="NUM2">2</string>
-    <string name ="NUM3">3</string>
-    <string name ="NUM4">4</string>
-    <string name ="NUM5">5</string>
-    <string name ="NUM6">6</string>
-    <string name ="NUM7">7</string>
-    <string name ="NUM8">8</string>
-    <string name ="NUM9">9</string>
-    <string name ="NUM10">10</string>
-    <string name ="NUM11">11</string>
-    <string name ="NUM12">12</string>
-    <string name ="NUM13">13</string>
-    <string name ="NUM14">14</string>
-    <string name ="NUM15">15</string>
-    <string name ="NUM16">16</string>
-    <string name ="NUM17">17</string>
-    <string name ="NUM18">18</string>
-    <string name ="NUM19">19</string>
-    <string name ="NUM20">20</string>
+    <string name="NUM2">2</string>
+    <string name="NUM3">3</string>
+    <string name="NUM4">4</string>
+    <string name="NUM5">5</string>
+    <string name="NUM6">6</string>
+    <string name="NUM7">7</string>
+    <string name="NUM8">8</string>
+    <string name="NUM9">9</string>
+    <string name="NUM10">10</string>
+    <string name="NUM11">11</string>
+    <string name="NUM12">12</string>
+    <string name="NUM13">13</string>
+    <string name="NUM14">14</string>
+    <string name="NUM15">15</string>
+    <string name="NUM16">16</string>
+    <string name="NUM17">17</string>
+    <string name="NUM18">18</string>
+    <string name="NUM19">19</string>
+    <string name="NUM20">20</string>
     <string name="imageLoadFail">이미지를 찾을 수 없습니다.</string>
     <string name="weekDate">%s.%s(%s)</string>
     <string name="land1">서울특별시</string>
@@ -108,4 +106,6 @@
     <string name="thursday">목</string>
     <string name="friday">금</string>
     <string name="saturday">토</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
